meja/tests/if-then-error.meja
let x : int = {
  if (true) { 15i; };
};
